final-ej/mstream.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mstream-app
  labels:
    run: mstream-app
spec:
  ports:
  - port: 3000
    name: mstream-app
    targetPort: 3000
  selector:
    run: mstream-app
  type: ClusterIP
